          invoke the callback asynchronously, contradicting documentation
          and causing signals to get lost (this includes AnyEvent's own
          event loop). AnyEvent now uses the standard pipe trick to make
          callback execution synchronous to the event loop.
        - work around the ever-incompatibly-changing API of MakeMaker.

4.34  Thu Feb 12 18:32:45 CET 2009
	- separately buffer TLS read data, as otherwise the read queue could
          deadlock as receiving data is not expected while draining the
          read queue (which cna only happen with TLS).
	- raise EBADMSG error on JSON decoding errors.
        - fix some minor manpage bugs (reported by Maximilian Gaß).
        - speed up select bitmask parsing quite a bit in the pure perl
          backend.
        - use CORE::select instead of just select in AnyEvent::Impl::Perl.

4.331 Tue Jan  6 21:07:25 CET 2009
	- socketpair fails on many vista machines because vista has
          completely broken accept/getpeername and getsockname functions,
          so we provide our own socketpair emulation that kind of works
          (AnyEvent::Util::portable_pipe).
        - new function: AnyEvent::Util::portable_socketpair.
	- take advantage of the Guard module if it exists.

4.33 Fri Nov 21 02:35:40 CET 2008
	- AnyEvent::Strict did errornously flag a fileno of 0 as
          illegal.
	- reduce memory usage and slightly speed up the pure perl backend
          by only storing the file descriptor, not the file handle.
        - add missing autocork method to AnyEvent::Handle (reported
          by Adam Rosenstein).
        - AnyEvent::DNS->resolve errornously documented an $rcode result
          argument, but there isn't (spotted by Henrik Krohns).
        - the naked truth about Tk - it's basically unmaintained.

4.32 Mon Nov  3 22:46:32 CET 2008
	- fix AnyEvent::Socket::resolve_sockaddr to properly support
          unix sockets again and choose a proper default for
          the socket type.